# Phy_visualizer

./: CMakeLists.txt  README.md  main.cpp
dependencies/include/glad/: gl.h
dependencies/src/: gl.c
gui/: mainwindow.ui
include/: animation_strategy.hxx  animator.hxx  geometry_2d.hxx  logs.hpp  mainwindow.hxx  strategy_factory.hxx  strategy_gameOfLife.hxx  strategy_matrix_visualizer.hxx  strategy_random_waves.hxx  strategy_sine_wave.hxx  strategy_spinning_cube.hxx
src/: CMakeLists.txt  animator.cxx  geometry_2d.cxx  logs.cpp  main.cpp  main.cxx  mainwindow.cxx  mainwindow.ui  mandelbrot.cpp  old_sine.cxx  sin.cpp  strategy_factory.cxx  strategy_gameOfLife.cxx  strategy_matrix_visualizer.cxx  strategy_random_waves.cxx  strategy_sine_wave.cxx  strategy_spinning_cube.cxx
src/Qt/: CMakeLists.txt  main.cxx  mainwindow.ui
tests/: main.cpp  test
